# Polizia_Locale

./: .gitignore  README.md  check_indicepa_prato.py  check_indicepa_prato_aoo.py  check_prato.py  pyproject.toml  requirements-cli.txt  run.py  start_dashboard.bat  start_dashboard.ps1  start_dashboard.py  test_brave_search.py  test_prato.py  test_web_search.py
.emergent/: emergent.yml
backend/: requirements.txt  server.py
cache/: polizia_locale_cache.sqlite
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  index.jsx
memory/: PRD.md
polizia_locale/: __init__.py  brave_search.py  browser_render.py  cli.py  comuni.py  confidence.py  exporter.py  html_tools.py  indicepa.py  normalization.py  pdf_extractor.py  persistent_cache.py  pm_registry.py  regions.py  reliability.py  scraper.py  unioni.py  utils.py  web_search.py
polizia_locale/scraper/: __init__.py  async_scraper.py  fast.py  heavy.py  medium.py
test_verify/: polizia_locale_umbria.csv  polizia_locale_umbria.json  polizia_locale_umbria.xlsx
tests/: test_cli_limits.py  test_normalization_confidence.py  test_scraper_prato.py  test_web_search_rendering.py
