[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polizia_locale"
version = "1.0.0"
description = "PEC & Email Finder for Polizia Locale/Municipale in Italy"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["polizia_locale*"]

[project.optional-dependencies]
dev = [
    "pytest",
]
